boinc-test/boinc-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boinc
  namespace: boinc
  labels:
    app: boinc
spec:
  replicas: 1
  template:
    metadata:
      name: boinc
      namespace: boinc
      labels:
        app: boinc
    spec:
      containers:
        - name: boinc
          image: boinc/client
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/boinc
              name: boinc
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 31416
              name: manager
              protocol: TCP
  selector:
    matchLabels:
      app: boinc
