boinc-test/boinc-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: boinc
  namespace: boinc
spec:
  selector:
    app: boinc
  ports:
    - port: 80
      name: http
      protocol: TCP
    - port: 443
      name: https
      protocol: TCP
    - port: 31416
      name: manager
      protocol: TCP
